[package]
name = "range_rover"
version = "0.1.3"
edition = "2021"
authors = ["Roman Chumak <p4ymak@yandex.ru>"]
license = "MIT"
repository = "https://github.com/p4ymak/range_rover"
description = "Function to pack integers into ranges.."
readme = "README.md"
keywords = ["integers", "numbers", "ranges", "packing", "compression"]
categories = ["algorithms", "compression"]

[dependencies]
num = "0.4.3"

[dev-dependencies]
rand = "0.8.5"
